--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,5 +14,177 @@
     font-weight:400;
     font-style: normal;
   }
+  /* shared styles */
+  .main{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  .display-flex{
+    display: flex;
+  }
+  .display-grid{
+    display: grid;
+  }
+.orange{
+    color: #FEA301;
+}
+.sky-blue{
+    color: #01ACFD;
+}
+.paste{
+    color: #05D4DF;
+}
+.purple{
+    color: #5D58EF;
+}
+.black{
+    color: #111111;
+}
+.light-green{
+    color: #95B226;
+}
+.bg{
+   background-color: #F7F7F7;
+   
+}
+.btn-primary{
+  background-color: black;
+  color: white;
+  padding: 10px 47px;
+  border: none;
+  border-radius: 12px;
+  font-weight: 700;
+  font-size: 1.25rem;
 
+}
+  
+
+
+
+  /* header styles */
+
+
+
+  /* navbar styles */
+  .navbar{
+    justify-content: space-between;
+    align-items: center;
+    }
+
+  .navbar, .banner{
+    max-width: 1160px;
+    margin: 0 auto;
+  }
+  .logo{
+    align-items: center;
+    
+  }
+  .brand{
+    font-weight: 700;
+    font-size: 2rem;
+  }
+  #hamburger{
+    display: none;
+    font-size: 24px;
+  
+    }
+  
+  .nav-button{
+    font-weight: 600;
+    font-size: 1.25rem;
+    padding: 10px 60px;
+    border: none;
+    border-radius: 12px;
+    background-color: orange;
+    color: white;
+    
+  }
+  .nav-item{
+    
+    list-style: none;
+    margin-right: 32px;
+  }
+  .nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.25rem;
+  
+    
+   
+
+  }
+  /* banner style */
+  .banner{
+    justify-content: center;
+    align-items: center;
+    max-width: 1160px;
+    margin: 0 auto;
+    gap: 50px;
+  }
+  .banner-content{
+    max-width: 640px;
+    gap: 50px;
+  
+  }
+  .banner-title{
+    font-weight: 700;
+    font-size: 3.5rem;
+  }
+  .banner-description{
+    font-size: 1.25rem;
+  }
+  .banner-image{
+    width: 100%;
+  }
+
+
+
+
+
+
+
+
+
+  /* responsive media query */
+  /* small device */
+  @media screen and (max-width: 576px) {
+   .banner{
+    flex-direction: column-reverse;
+    margin: 20px;
+    margin-top: 0;
+    gap: 0;
+
+    }
+    .banner-content{
+      text-align: center;
+     /* margin: 20px; */
+
+    }
+    .banner-title{
+      font-size: 2rem;
+    }
+    .banner-description{
+      font-weight: 500;
+      font-size: .87rem;
+    }
+    .btn-primary{
+      font-size: 1rem;
+      padding: 6px 24px;
+    }
+    .nav-links, .brand, .nav-button{
+      display: none;
+    }
+    .logo{
+      flex-direction: column; 
+    }
+    .navbar{
+      justify-content: space-between;
+      border: .5px solid orange;
+      padding: 12px 16px;
+   
+    }
+    #hamburger{
+      display: block;
+    }
+  }
 
